Added NLog and Swagger

--- a/WT-WebAPI/appsettings.json
+++ b/WT-WebAPI/appsettings.json
@@ -10,6 +10,10 @@
       "LogLevel": {
         "Default": "Warning"
       }
+    },
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft": "Information"
     }
   }
 }
