Added Entity Frameworok Databse Support.. Created simple model, context and db initializer...Also scafolded default controller

--- a/WT-WebAPI/appsettings.json
+++ b/WT-WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WorkoutTrackingDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
