--- a/WT-WebAPI/WT_WebAPI.csproj
+++ b/WT-WebAPI/WT_WebAPI.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WT_WebAPI.Entities\WT_WebAPI.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
