Added Entity Models... Seed the databse... changed NLog config to log in project DIR

--- a/WT-WebAPI/WT_WebAPI.csproj
+++ b/WT-WebAPI/WT_WebAPI.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <Content Update="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
