--- a/WT-WebAPI/nlog.config
+++ b/WT-WebAPI/nlog.config
@@ -3,22 +3,24 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="info"
-      internalLogFile="D:\temp\internal-nlog.txt">
+      internalLogFile="LOGS\internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
 
+  <variable name="logFolder" value="..\..\..\LOGS" />
+  
   <!-- the targets to write to -->
   <targets>
     <!-- write logs to file  -->
-    <target xsi:type="File" name="allfile" fileName="D:\temp\nlog-all-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+    <target xsi:type="File" name="allfile" fileName="${logFolder}\nlog-all-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url} |action: ${aspnet-mvc-action}" />
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
-    <target xsi:type="File" name="ownFile-web" fileName="D:\temp\nlog-own-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+    <target xsi:type="File" name="ownFile-web" fileName="${logFolder}\nlog-own-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url} |action: ${aspnet-mvc-action}" />
   </targets>
 
   <!-- rules to map from logger name to target -->
