--- a/WT-WebAPI/WT_WebAPI.csproj
+++ b/WT-WebAPI/WT_WebAPI.csproj
@@ -30,4 +30,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\Statistics\" />
+  </ItemGroup>
+
 </Project>
